--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "chart.js": "^3.5.1",
+    "chartkick": "^4.0.5",
     "jquery": "^3.6.0",
     "turbolinks": "^5.2.0"
   },
