Add react and redux

--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "MKT_FARM_SYSTEMS",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.17.12",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chart.js": "^3.5.1",
     "chartkick": "^4.0.5",
     "jquery": "^3.6.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
