--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.5",
     "@rails/ujs": "^6.0.5",
     "@rails/webpacker": "5.4.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chart.js": "^3.8.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
